reworked compiler to detect different source-types depending on the file extension of the source file